style.css
body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
  margin-left: auto;
  margin-right: auto;
}

.header {
  height: 72px;
  background-color: #1F2937;
  display: flex;
  justify-content: center;
}

.header-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 1050px;
}

.left-logo {
  font-size: 24px;
  font-weight: bold;
  color: #F9FAF8;
}

.right-links {
  display: flex;
  justify-content: space-evenly;
  gap: 20px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a {
  color: #E5E7EB;
  text-decoration: none;
  font-size: 18px;
}

.section1 {
  background-color: #1F2937;
  display: flex;
  justify-content: center;
  padding: 100px 0;
  gap: 80px;
}

.section1-content{
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 420px;
}

.hero-title {
  font-size: 48px;
  font-weight: 900;
  color: #F9FAF8;
  margin: 0;
}

.hero-text {
  font-size: 18px;
  color: #E5E7EB;
  margin: 0;
}

.section1-button {
  width: 130px;
  height: 35px;
  background-color: #3882F6;
  color: #F9FAF8;
  font-size: 16px;
  font-weight: bold;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.section1-image-placeholder {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 550px;
  height: 220px;
  background-color: #6D747D;
  color: #E5E7EB;
  font-size: 18px;
}

.section2 {
  background-color: #FFFFFF;
}

.section2-title {
  font-size: 36px;
  font-weight: 900;
  color: #1F2937;
  text-align: center;
  padding: 40px 0;
  margin: 0;
}

.section2-content {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 40px;
}

.section2-image-text-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.section2-image-placeholder {
  width: 180px;
  height: 180px;
  border: 4px solid #3882F6;
  border-radius: 15px;
}

.section2-text {
  width: 150px;
  height: 150px;
  text-align: center;
  color: #646a72;
  margin: 0;
}

.section3 {
  background-color: #E5E7EB;
  padding: 120px 0;
  display: flex;
  justify-content: center;
}

.section3-content {
  width: 830px;
}

.quote {
  font-size: 36px;
  font-style: italic;
  font-weight: 300;
  color: #1F2937;
  margin: 0;
}

.signature {
  font-size: 22px;
  font-weight: 900;
  color: #1a2331;
  margin: 0;
  text-align: right;
  padding-right: 40px;
}

.section4 {
  background-color: #FFFFFF;
  display: flex;
  justify-content: center;
}

.section4-container {
  background-color: #FFFFFF;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  margin: 100px;
  padding: 50px 100px;
  width: 850px;
  background-color: #3882F6;
  gap: 200px;
  border-radius: 15px;
}
.section4-title {
  font-size: 22px;  
  font-weight: 600;
  color: white;
  margin: 0;
}

.section4-text {
  font-size: 16px;  
  color: rgb(230, 230, 230);
  margin: 0;
}

.section4-button {
  width: 130px;
  height: 35px;
  background-color: #3882F6;
  color: #F9FAF8;
  font-size: 16px;
  font-weight: bold;
  border: white solid 2px;
  border-radius: 5px;
  cursor: pointer;
}

.footer {
  height: 100px;
  background-color: #1F2937;
  color: #E5E7EB;
  font-size: 18px;
  display: flex;
  justify-content: center;
  align-items: center;
}

